==> Ayra125/STM32-Multi-Protocol-IMU-Data-Logger/firmware/Peripherals/i2c/ssd1306.c <==
#include "ssd1306.h"
#include <string.h>
static const uint8_t font[][5] = {
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 32 space
    {0x00, 0x00, 0x5F, 0x00, 0x00}, // 33 !
    {0x00, 0x07, 0x00, 0x07, 0x00}, // 34 "
    {0x14, 0x7F, 0x14, 0x7F, 0x14}, // 35 #
    {0x24, 0x2A, 0x7F, 0x2A, 0x12}, // 36 $
    {0x23, 0x13, 0x08, 0x64, 0x62}, // 37 %
    {0x36, 0x49, 0x55, 0x22, 0x50}, // 38 &
    {0x00, 0x05, 0x03, 0x00, 0x00}, // 39 '
    {0x00, 0x1C, 0x22, 0x41, 0x00}, // 40 (
    {0x00, 0x41, 0x22, 0x1C, 0x00}, // 41 )
    {0x08, 0x2A, 0x1C, 0x2A, 0x08}, // 42 *
    {0x08, 0x08, 0x3E, 0x08, 0x08}, // 43 +
    {0x00, 0x50, 0x30, 0x00, 0x00}, // 44 ,
    {0x08, 0x08, 0x08, 0x08, 0x08}, // 45 -
    {0x00, 0x60, 0x60, 0x00, 0x00}, // 46 .
    {0x20, 0x10, 0x08, 0x04, 0x02}, // 47 /
    {0x3E, 0x51, 0x49, 0x45, 0x3E}, // 48 0
    {0x00, 0x42, 0x7F, 0x40, 0x00}, // 49 1
    {0x42, 0x61, 0x51, 0x49, 0x46}, // 50 2
    {0x21, 0x41, 0x45, 0x4B, 0x31}, // 51 3
    {0x18, 0x14, 0x12, 0x7F, 0x10}, // 52 4
    {0x27, 0x45, 0x45, 0x45, 0x39}, // 53 5
    {0x3C, 0x4A, 0x49, 0x49, 0x30}, // 54 6
    {0x01, 0x71, 0x09, 0x05, 0x03}, // 55 7
    {0x36, 0x49, 0x49, 0x49, 0x36}, // 56 8
    {0x06, 0x49, 0x49, 0x29, 0x1E}, // 57 9
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 58 :
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 59 ;
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 60 
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 61 =
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 62 >
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 63 ?
    {0x00, 0x00, 0x00, 0x00, 0x00}, // 64 @
    {0x7E, 0x11, 0x11, 0x11, 0x7E}, // 65 A
    {0x7F, 0x49, 0x49, 0x49, 0x36}, // 66 B
    {0x3E, 0x41, 0x41, 0x41, 0x22}, // 67 C
    {0x7F, 0x41, 0x41, 0x22, 0x1C}, // 68 D
    {0x7F, 0x49, 0x49, 0x49, 0x41}, // 69 E
    {0x7F, 0x09, 0x09, 0x09, 0x01}, // 70 F
    {0x3E, 0x41, 0x49, 0x49, 0x7A}, // 71 G
    {0x7F, 0x08, 0x08, 0x08, 0x7F}, // 72 H
    {0x00, 0x41, 0x7F, 0x41, 0x00}, // 73 I
    {0x20, 0x40, 0x41, 0x3F, 0x01}, // 74 J
    {0x7F, 0x08, 0x14, 0x22, 0x41}, // 75 K
    {0x7F, 0x40, 0x40, 0x40, 0x40}, // 76 L
    {0x7F, 0x02, 0x0C, 0x02, 0x7F}, // 77 M
    {0x7F, 0x04, 0x08, 0x10, 0x7F}, // 78 N
    {0x3E, 0x41, 0x41, 0x41, 0x3E}, // 79 O
    {0x7F, 0x09, 0x09, 0x09, 0x06}, // 80 P
    {0x3E, 0x41, 0x51, 0x21, 0x5E}, // 81 Q
    {0x7F, 0x09, 0x19, 0x29, 0x46}, // 82 R
    {0x46, 0x49, 0x49, 0x49, 0x31}, // 83 S
    {0x01, 0x01, 0x7F, 0x01, 0x01}, // 84 T
    {0x3F, 0x40, 0x40, 0x40, 0x3F}, // 85 U
    {0x1F, 0x20, 0x40, 0x20, 0x1F}, // 86 V
    {0x3F, 0x40, 0x38, 0x40, 0x3F}, // 87 W
    {0x63, 0x14, 0x08, 0x14, 0x63}, // 88 X
    {0x07, 0x08, 0x70, 0x08, 0x07}, // 89 Y
    {0x61, 0x51, 0x49, 0x45, 0x43}, // 90 Z
};
HAL_StatusTypeDef SSD1306_Init(I2C_HandleTypeDef *hi2c){
if(SSD1306_SendCommand(hi2c,SSD1306_SET_MUX_RATIO)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,0x3F)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SET_DISP_OFFSET)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,0x00)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SET_DISP_START)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SEG_REMAP_NORMAL)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_COM_SCAN_NORMAL)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SET_COM_PINS)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,0x02)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SET_CONTRAST)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,0x7F)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_DISPLAY_RAM)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_NORMAL_DISPLAY)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SET_CLK_DIV)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,0x80)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_SET_CHARGE_PUMP)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_CHARGE_PUMP_ON)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_DISP_ON)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,SSD1306_MEM_ADDR_MODE)!=HAL_OK) return HAL_ERROR;
if(SSD1306_SendCommand(hi2c,0x00)!=HAL_OK) return HAL_ERROR;
return HAL_OK;
}

HAL_StatusTypeDef SSD1306_SendCommand(I2C_HandleTypeDef *hi2c,uint8_t cmd){
      uint8_t data[2]={SSD1306_CMD, cmd};

    return HAL_I2C_Master_Transmit(hi2c, SSD1306_ADDR <<1,data,2,500);
}

HAL_StatusTypeDef SSD1306_SendData(I2C_HandleTypeDef *hi2c,const uint8_t *data,uint16_t size){
    if (size > 128) return HAL_ERROR;
    uint8_t buff[129];
    buff[0]=SSD1306_DATA;
    memcpy(&buff[1],data,size);
    return HAL_I2C_Master_Transmit(hi2c, SSD1306_ADDR <<1,buff,size+1,500);
}

HAL_StatusTypeDef SSD1306_Clear(I2C_HandleTypeDef *hi2c){
    uint8_t zeros[128] = {0};
    if(SSD1306_SendCommand(hi2c, SSD1306_COL_ADDR) != HAL_OK) return HAL_ERROR;
    if(SSD1306_SendCommand(hi2c, 0) != HAL_OK) return HAL_ERROR;
    if(SSD1306_SendCommand(hi2c, 127) != HAL_OK) return HAL_ERROR;
    if(SSD1306_SendCommand(hi2c, SSD1306_PAGE_ADDR) != HAL_OK) return HAL_ERROR;
    if(SSD1306_SendCommand(hi2c, 0) != HAL_OK) return HAL_ERROR;
    if(SSD1306_SendCommand(hi2c, 7) != HAL_OK) return HAL_ERROR;
    for(int i = 0; i < 8; i++){
        if(SSD1306_SendData(hi2c, zeros, 128) != HAL_OK) return HAL_ERROR;
    }
    return HAL_OK;
}

HAL_StatusTypeDef SSD1306_WriteString(I2C_HandleTypeDef *hi2c,char *string){
   while(*string != '\0'){
        if(*string < 32 || *string > 90) {
        string++;
        continue;
        }
        if(SSD1306_SendData(hi2c, font[*string - 32], 5) != HAL_OK) return HAL_ERROR;
        string++;
    }
    return HAL_OK;
}
